@@ -46,8 +46,6 @@ class S2DaoClassLoader {
         'S2Dao_BasicStatementFactory' => '/extension/db/impl/S2Dao_BasicStatementFactory.class.php',
         'S2Dao_BasicSelectHandler' => '/extension/db/impl/S2Dao_BasicSelectHandler.class.php',
         'S2Dao_BasicUpdateHandler' => '/extension/db/impl/S2Dao_BasicUpdateHandler.class.php',
-        'S2Dao_MapResultSetHandler' => '/extension/db/impl/S2Dao_MapResultSetHandler.class.php',
-        'S2Dao_ObjectResultSetHandler' => '/extension/db/impl/S2Dao_ObjectResultSetHandler.class.php',
         'S2Dao_PropertyTypeImpl' => '/extension/db/impl/S2Dao_PropertyTypeImpl.class.php',
         'S2Dao_ResultSetHandler' => '/extension/db/S2Dao_ResultSetHandler.class.php',
         'S2Dao_ResultSetFactory' => '/extension/db/S2Dao_ResultSetFactory.class.php',
@@ -217,6 +215,8 @@ class S2DaoClassLoader {
         'S2Dao_BeanListMetaDataResultSetHandler' => '/dao/resultset/S2Dao_BeanListMetaDataResultSetHandler.class.php',
         'S2Dao_BeanYamlMetaDataResultSetHandler' => '/dao/resultset/S2Dao_BeanYamlMetaDataResultSetHandler.class.php',
         'S2Dao_BeanJsonMetaDataResultSetHandler' => '/dao/resultset/S2Dao_BeanJsonMetaDataResultSetHandler.class.php',
+        'S2Dao_MapResultSetHandler' => '/dao/resultset/S2Dao_MapResultSetHandler.class.php',
+        'S2Dao_ObjectResultSetHandler' => '/dao/resultset/S2Dao_ObjectResultSetHandler.class.php',
     );
 
     public static function load($className){
