@@ -1,3 +1,9 @@
+2006-07-08 nowel(S2Dao.PHP5-1.1.0)
+
+    * add: S2Dao_MapResultSetHandller
+    * move: /extension/db/S2Dao_ObjectResultSetHandler
+            to /dao/resultset/S2Dao_ObjectResultSetHandler
+
 2006-07-06 nowel(S2Dao.PHP5-1.1.0)
 
     * fix: SQLコメントのELSEが正しく動作しない不具合を修正しました。
